--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,11 @@ install:
   # Create ansible.cfg with correct roles_path
   - printf '[defaults]\nroles_path=../' > ansible.cfg
 
+  # Ansible dependencies
+  - ansible-galaxy install jpnewman.java
+  - ansible-galaxy install jpnewman.apache
+  - ansible-galaxy install retr0h.logrotate
+
 script:
   # Basic role syntax check
   - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
